adding test for incoming json/yaml in tests/

--- a/tests/buildout.cfg
+++ b/tests/buildout.cfg
@@ -1,8 +1,7 @@
 [buildout]
-parts = django
+parts = django 
 develop = ..
-eggs = 
-    django-piston
+eggs = django-piston
 
 [django]
 recipe = djangorecipe
